--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.1",
+    "@tanstack/react-query": "^5.49.2",
+    "axios": "^1.7.2",
+    "firebase": "^11.0.2",
     "framer-motion": "^12.0.0-alpha.0",
+    "jodit-pro-react": "^4.1.20",
+    "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
+    "react-image-magnifiers": "^1.4.0",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
+    "sonner": "^1.7.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
