--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-image-magnifiers": "^1.4.0",
