--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
     "firebase": "^11.0.2",
-    "framer-motion": "^12.0.0-alpha.0",
+    "framer-motion": "^12.0.5",
     "jodit-pro-react": "^4.1.20",
     "jwt-decode": "^4.0.0",
     "keen-slider": "^6.8.6",
@@ -32,6 +32,7 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
