--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-image-magnifiers": "^1.4.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
     "sonner": "^1.7.0",
